Add  annotations for later swager ui documentation